修改了筛选器样式 修正了字符问题 删除了无用的NavHeader

--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BedrockLauncher.Core" Version="25.8.2.855" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.Segmented" Version="8.2.250402" />
     <PackageReference Include="DevWinUI" Version="8.8.0" />
     <PackageReference Include="DevWinUI.Controls" Version="8.8.0" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4654" />
