--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -31,6 +31,8 @@
     <None Remove="Pages\SettingPage\DevelopersPage.xaml" />
     <None Remove="Pages\SettingsPage.xaml" />
     <None Remove="Pages\TaskPage.xaml" />
+    <None Remove="Styles\CubeThemeDictionary.xaml" />
+    <None Remove="Styles\CubeUI.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Page Remove="Styles\Styles.xaml" />
@@ -144,6 +146,12 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="Controls\TaskCard.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Styles\CubeThemeDictionary.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Styles\CubeUI.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <None Update="Styles\Styles.xaml">
