feat： update Task

--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -68,7 +68,7 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="BedrockLauncher.Core" Version="25.8.2.855" />
+    <PackageReference Include="BedrockLauncher.Core" Version="25.8.5.841" />
     <PackageReference Include="CommunityToolkit.WinUI.Controls.Segmented" Version="8.2.250402" />
     <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.2.250402" />
     <PackageReference Include="DevWinUI" Version="8.9.0" />
@@ -168,6 +168,9 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>NavigationPageMappings.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Types\" />
   </ItemGroup>
 
   <!--
