--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -30,6 +30,7 @@
     <Content Remove="Assets\MC_Release_Icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Controls\ContentDialogContent\AddNewGameFolderContent.xaml" />
     <None Remove="Controls\ContentDialogContent\DownloadGameContent.xaml" />
     <None Remove="Controls\DefaultContentDialogFrame.xaml" />
     <None Remove="Controls\PersonPictureButton.xaml" />
@@ -171,6 +172,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="Controls\PersonPictureButton.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Controls\ContentDialogContent\AddNewGameFolderContent.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <None Update="Styles\Styles.xaml">
