--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           name: win-artifacts
           path: |
-            ./BedrockBoot/releases/BedrockBoot.win.x64.installer.exe
+             D:\a\BedrockBoot\BedrockBoot\BedrockBoot\Deploy\OUT\.\releases\BedrockBoot.win.x64.installer.exe
 
   publish:
     needs: [win, time]
