--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -50,11 +50,8 @@ jobs:
           cd ./BedrockBoot
           pupnet -r win-x64 -k setup -y -o ./releases/BedrockBoot.win.x64.installer.exe --app-version ${{ needs.time.outputs.y }}.${{ needs.time.outputs.md }}.${{ needs.time.outputs.hm }}
       - name: UploadArtifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: win-artifacts
-          path: |
-             ./releases/BedrockBoot.win.x64.installer.exe
+        run: |
+          ls
 
   publish:
     needs: [win, time]
