--- a/BedrockBoot/BedrockBoot.pupnet.conf
+++ b/BedrockBoot/BedrockBoot.pupnet.conf
@@ -105,7 +105,7 @@ DotnetProjectPath =
 # '-p:DebugType=None -p:DebugSymbols=false -p:PublishSingleFile=true -p:PublishReadyToRun=true
 # -p:PublishTrimmed=true -p:TrimMode=link'. Note. This value may use macro variables. Use 'pupnet --help macro'
 # for reference. See: https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-publish
-DotnetPublishArgs = -p:Version=${APP_VERSION} --self-contained false
+DotnetPublishArgs = -c Release --runtime win-x64 --self-contained true -p:PublishSingleFile=false -p:PublishReadyToRun=true -p:PublishTrimmed=false -p:Version=${APP_VERSION} 
 
 # Post-publish (or standalone build) command on Linux (ignored on Windows). It is called after dotnet
 # publish, but before the final output is built. This could, for example, be a script which copies
