--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Controls\ContentDialogContent\AddNewGameFolderContent.xaml" />
+    <None Remove="Controls\ContentDialogContent\DelGameVersionContent.xaml" />
     <None Remove="Controls\ContentDialogContent\DownloadGameContent.xaml" />
     <None Remove="Controls\DefaultContentDialogFrame.xaml" />
     <None Remove="Controls\PersonPictureButton.xaml" />
@@ -175,6 +176,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="Controls\ContentDialogContent\AddNewGameFolderContent.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Controls\ContentDialogContent\DelGameVersionContent.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <None Update="Styles\Styles.xaml">
