--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -33,6 +33,7 @@
     <None Remove="Controls\ContentDialogContent\AddNewGameFolderContent.xaml" />
     <None Remove="Controls\ContentDialogContent\DelGameVersionContent.xaml" />
     <None Remove="Controls\ContentDialogContent\DownloadGameContent.xaml" />
+    <None Remove="Controls\ContentDialogContent\ImportPackContent.xaml" />
     <None Remove="Controls\DefaultContentDialogFrame.xaml" />
     <None Remove="Controls\PersonPictureButton.xaml" />
     <None Remove="Controls\TaskCard.xaml" />
@@ -181,6 +182,9 @@
     <Page Update="Controls\ContentDialogContent\DelGameVersionContent.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Update="Controls\ContentDialogContent\ImportPackContent.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <None Update="Styles\Styles.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
@@ -198,6 +202,9 @@
     <None Update="Uwp.Injector.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Windows\ImportPackWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <!--
@@ -228,8 +235,5 @@
   </ItemGroup>
   <ItemGroup>
     <PRIResource Remove="Assets\AppReference\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tools\EasyContentDialogResource\" />
   </ItemGroup>
 </Project>
