--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -35,9 +35,11 @@
     <None Remove="Controls\ContentDialogContent\DownloadGameContent.xaml" />
     <None Remove="Controls\ContentDialogContent\DownloadUpdateFileContent.xaml" />
     <None Remove="Controls\ContentDialogContent\ImportPackContent.xaml" />
+    <None Remove="Controls\ContentDialogContent\SettingMouseLockPaddingContent.xaml" />
     <None Remove="Controls\DefaultContentDialogFrame.xaml" />
     <None Remove="Controls\PersonPictureButton.xaml" />
     <None Remove="Controls\TaskCard.xaml" />
+    <None Remove="Controls\ToolItem.xaml" />
     <None Remove="Pages\DownloadPage.xaml" />
     <None Remove="Pages\HomePage.xaml" />
     <None Remove="Pages\ModManagerPage.xaml" />
@@ -48,6 +50,7 @@
     <None Remove="Pages\SettingPage\DevelopersPage.xaml" />
     <None Remove="Pages\SettingsPage.xaml" />
     <None Remove="Pages\TaskPage.xaml" />
+    <None Remove="Pages\ToolsBoxPage.xaml" />
     <None Remove="Pages\VersionPage.xaml" />
     <None Remove="Styles\CubeThemeDictionary.xaml" />
     <None Remove="Styles\CubeUI.xaml" />
@@ -194,9 +197,18 @@
     <Page Update="Controls\ContentDialogContent\DownloadUpdateFileContent.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Update="Controls\ToolItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Controls\ContentDialogContent\SettingMouseLockPaddingContent.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <None Update="MinimiseFix.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Pages\ToolsBoxPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <None Update="Styles\Styles.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
