feat: 修改一些内容

--- a/BedrockBoot/BedrockBoot.csproj
+++ b/BedrockBoot/BedrockBoot.csproj
@@ -45,12 +45,11 @@
     <None Remove="Controls\ToolItem.xaml" />
     <None Remove="Pages\DownloadPage.xaml" />
     <None Remove="Pages\HomePage.xaml" />
+    <None Remove="Pages\ManagerPackPage.xaml" />
+    <None Remove="Pages\ManagerPages\ManagerResourcePacksPage.xaml" />
+    <None Remove="Pages\ManagerPages\ManagerWorldsPage.xaml" />
     <None Remove="Pages\ModManagerPage.xaml" />
     <None Remove="Pages\OOBEPage.xaml" />
-    <None Remove="Pages\SettingPage\AboutPage.xaml" />
-    <None Remove="Pages\SettingPage\AppearancePage.xaml" />
-    <None Remove="Pages\SettingPage\BehaviorPage.xaml" />
-    <None Remove="Pages\SettingPage\DevelopersPage.xaml" />
     <None Remove="Pages\SettingsPage.xaml" />
     <None Remove="Pages\TaskPage.xaml" />
     <None Remove="Pages\ToolsBoxPage.xaml" />
@@ -105,9 +104,6 @@
     <Page Update="Pages\SettingsPage\Appearance.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Update="Pages\SettingPage\AppearancePage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\SettingsPage.xaml">
@@ -140,15 +136,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Page Update="Pages\SettingPage\AboutPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Update="Pages\SettingPage\BehaviorPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Update="Pages\SettingPage\DevelopersPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Update="Pages\TaskPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -218,6 +205,15 @@
     <None Update="MinimiseFix.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Pages\ManagerPages\ManagerWorldsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Pages\ManagerPages\ManagerResourcePacksPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Pages\ManagerPackPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Pages\ToolsBoxPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
